# GDZ-py

./: LICENSE.txt  README.md  pyproject.toml
src/gdzru/: __about__.py  __init__.py  api.py  exceptions.py
src/gdzru/types/: __init__.py  book.py  full_book_list.py  task.py  type.py
tests/: __init__.py
