[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gdzru"
dynamic = ["version"]
description = 'Python library for using gdz.ru API'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = [
  "gdz",
  "ru",
  "gdzru",
  "gdz.ru",
  "api",
  "gdz ru api",
  "gdz.ru api",
  "гдз",
  "гдз ру",
  "гдз api",
]
authors = [
  { name = "Den4ikSuperOstryyPer4ik", email = "oleynik.denis.2009@gmail.com" },
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pydantic",
  "aiohttp",
]

[project.urls]
Usage = "https://github.com/Den4ikSuperOstryyPer4ik/GDZ-py#usage"
Issues = "https://github.com/Den4ikSuperOstryyPer4ik/GDZ-py/issues"
Source = "https://github.com/Den4ikSuperOstryyPer4ik/GDZ-py"
Author = "https://github.com/Den4ikSuperOstryyPer4ik"

[tool.hatch.version]
path = "src/gdzru/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py39"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py39"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  # Ignore built-in names
  "A003", "A002",

  "PLR2004",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["gdzru"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["gdzru", "tests"]
branch = true
parallel = true
omit = [
  "src/gdzru/__about__.py",
]

[tool.coverage.paths]
gdzru = ["src/gdzru", "*/gdzru/src/gdzru"]
tests = ["tests", "*/gdzru/tests"]

[tool.hatch.build.wheel]
packages = ["src/gdzru"]
